src/tests/fixtures/unions/DefineUnionTypeReferencingInputType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class Query {
  /** @gqlField */
  me: Actor;
}

/** @gqlType */
class User {
  /** @gqlField */
  name: string;
}

/** @gqlInput */
type Entity = {
  description: string;
};

/** @gqlUnion */
type Actor = User | Entity;

-----------------
OUTPUT
-----------------
src/tests/fixtures/unions/DefineUnionTypeReferencingInputType.invalid.ts:19:21 - error: Union type Actor can only include Object types, it cannot include Entity.

19 type Actor = User | Entity;
                       ~
